Fixed pressing remove on entries would collapse the entry and not delete it (fixes #45)

--- a/resources/sass/calendar/inputs.scss
+++ b/resources/sass/calendar/inputs.scss
@@ -398,13 +398,10 @@ label{
 
 .remove-container{
     width:100%;
-    height:100%;
     z-index:10;
     pointer-events: none;
     display: flex;
     align-items: center;
-    top: 0px;
-    position: absolute;
 }
 
 .remove-container-text{
